# python-example-project

./: .flake8  .gitignore  README.md  pyproject.toml
src/: logging.conf  main.py
src/example/: hello.py  module1.py  module2.py
src/tool/: h.py
tests/: test_hello.py
tests/example/: test_hello.py
tests/integration/: test_something.py
