[tool.poetry]
name = "python-example-project"
version = "0.1.0"
readme = "README.md"
description = ""
authors = ["Hoyeong Heo <hotohoto82@gmail.com>"]
packages = [
    { include = "example", from="src" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pytest = "^6.2.4"
flake8 = "^3.9.2"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "example.hello:main"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["example"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.py$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | data
)/
'''

[tool.isort]
profile = "black"
