[tool.poetry]
authors = ["Hoyeong Heo <hotohoto82@gmail.com>"]
description = ""
name = "python-example-project"
packages = [
  {include = "example", from = "src"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.0.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.2"
isort = "^5.10.1"
poethepoet = "^0.13.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[tool.poe.tasks]
hello = {script = "example.hello:main"}
main = {script = "main:main"}
my_script = "bin/my_script.sh"
test = "pytest -- tests/example"
test_integration = "pytest -- tests/integration"
format = "sh -c 'black . && isort src tests'"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["example"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[tool.black]
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | data
)/
'''
include = '\.py$'
line-length = 100
target-version = ['py36', 'py37', 'py38']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
